@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}
class Freelancer {
  -String freeID
  -String name
  -String levelExp
  -String email
  -String nif
  -String iban
  -String country
}

class Organization {
  -String name
  -String email
  -String nif
}

class Collaborator{
  -String nameC
  -String emailC
  -String role
}

class Task {
  -String idTask
  -String description
  -int timeTask
  -double costHour
  -String taskCategory
  -boolean isPayed
  -boolean isFinished
}


class User {
}

class TransactionExecution { 
  -Date endDate
  -double delay
  -String descriptionOfQuality
  -int transID
}

class Payment{
  -double valueE
  -double valueC
}


Freelancer "1" -- "1" Payment: receives >
Task "1..*" -- "1" Freelancer: made by >
Platform "1" -- "1..*" Organization: has registered >
Platform "1" -- "1..*" Freelancer: has >
Organization "1" -- "1..*" Task: has >
Organization "1" -- "1" Collaborator: has >
Organization "1" -- "1..*" TransactionExecution: has >

Collaborator "1" -- "1..*" TransactionExecution: creates >
Collaborator "1" -- "1" User: acts as >



TransactionExecution "1" -- "1" Task: has >
TransactionExecution "1" -- "1" Freelancer: has >
TransactionExecution "1" -- "1" Payment: originates >


@enduml


